[package]
name = "recrypt_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes = "0.7.4"
block-modes = "0.8.1"
block-padding = "0.2.1"
ironoxide = "2.0.0"
recrypt = "0.13.1"
serde = "1.0.164"
serde_json = "1.0.96"
